--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,6 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="75dp"
         android:src="@drawable/googleplay"
+        android:layout_marginTop="20dp"
         />
     <ImageView
         android:layout_width="match_parent"
